--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,10 @@ pkg-config = "0.3.7"
 bitflags = "^1.0"
 lazy_static = "1.0"
 libc = "^0.2"
-glib-sys = "0.8.0"
-gobject-sys = "0.8.0"
-gtk = "0.6.0"
-glib = "0.7.1"
+glib-sys = "0.9.0"
+gobject-sys = "0.9.0"
+gtk = "0.7.0"
+glib = "0.8.1"
 #glib-sys = { git = "https://github.com/gtk-rs/sys" }
 #gobject-sys = { git = "https://github.com/gtk-rs/sys" }
 #gtk = { git = "https://github.com/gtk-rs/gtk" }
@@ -27,6 +27,8 @@ version = "0.1.1"
 [dev-dependencies]
 shell-words = "0.1.0"
 tempdir = "0.3"
+serial_test = "0.2.0"
+serial_test_derive = "0.2.0"
 # Add deps on syn and quote to do macros for exporting to JS.
 
 [features]
@@ -47,3 +49,4 @@ license = "MIT"
 name = "javascriptcore-rs"
 repository = "https://github.com/gtk-rs/javascriptcore-rs"
 version = "0.5.0"
+edition = "2018"
